# rust-plugin-study

./: Cargo.toml  Makefile.toml  README.md  build.rs
default-module/mod1/: Cargo.toml
default-module/mod1/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
