[package]
name = "rust-plugin-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { workspace = true }
log = { workspace = true }

mod1 = { path = "default-module/mod1" }

[workspace.dependencies]
lib = { path = "lib", version = "*" }
log = "0.4"
anyhow = "1"
